# BUX

./: .dockerignore  .gitignore  .markdownlintignore  AUDIT_CORRECTION.md  CI_11_CODE_NOISE_AUDIT.md  CI_11_PROTECTION.md  CI_11_TESTED_FILES_BACKUP.md  COPILOT_FIX_TASKS.md  DEMO_DEV_STATUS.md  F5_1_SETTINGS_COMPLETION_REPORT.md  F6_DEMO_DEV_ON_D_REPORT.md  F7_2_PROFILE_COMPLETION_REPORT.md  Makefile  README.md  alembic.ini  cloud_smoke_test.sh  conftest.py  deployment_report_20251119_135329.json  deployment_report_20251119_135348.json  deployment_report_20251119_135452.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  rules
.github/: DEPLOYMENT_SETUP.md  STAGE5_SETUP_GUIDE.md
agent/: .dockerignore  Dockerfile  main.py
api/: .dockerignore  Dockerfile  G3_EVIDENCE.md  G4_EVIDENCE.md  G5_EVIDENCE.md  __init__.py  _seed_temp.py  admin_ui.py  alembic.ini  auth.py  check_b1.py  check_db.py  check_pins.py  check_schema.py  config.py  create_admin.py  create_employee_admin.py  crud_users.py  db.py  debug_db.py  deps_auth.py  docgen.py  docgen_html.py  endpoints_auth.py  endpoints_bot_menu.py  endpoints_dashboard.py  endpoints_employees.py  endpoints_profile.py  endpoints_reports.py  endpoints_salaries.py  endpoints_settings.py  endpoints_shifts.py  endpoints_users.py  endpoints_work_records.py  init_db.py  insert_test_pending.py  main.py  main.py.server  metrics_rollup.py  models.py  (+14 more)
bot/: .dockerignore  Dockerfile  __init__.py  admin_panel.py  admin_panel_BACKUP_20251119_224101.py  admin_panel_NEW.py  admin_users.py  config.py  (+10 more)
(+271 files in other folders)
